Wed Jun 21 15:29:49 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Maybe fix a race condition that could cause a crash if a tooltip
	    tries to pop up after the window is closed. (#343356)

Wed Jun 21 03:50:41 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	  - Rename "stdout" to "out" to be less confusing.

Wed Jun 21 02:05:28 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/*:
	  - Update translations from the rosetta dapper branch, since that
	    seems to be where everyone is doing stuff.

Tue Jun 20 18:37:48 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	  - If libenchant is not installed, or there are no dictionaries, show
	    a short message indicating how to get spell-checking working
	    rather than an empty language-selector list. (#345199)

Tue Jun 20 18:16:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Move widget creation for the spell-checking preferences page into
	    the code, in preparation for making the contents of the page
	    dependent on whether or not enchant is installed with any
	    dictionaries.

Tue Jun 20 17:47:04 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/channel-list.c:
	* data/xchat-gnome-ui.xml:
	* data/channel-list.glade:
	  - Remove the "Save List As" button from the channel list window and
	    the "Information" entry from the network menu.  They can be added
	    back when/if they're implemented.

Tue Jun 20 17:31:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.13svn

==================== 0.12 ====================

Tue Jun 20 16:16:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - Add tagline
